--- a/readme
+++ b/readme
@@ -32,3 +32,5 @@ Options:
                         store result of command excecuted, filename is
                         hostname + writefile if using -T option
 </pre>
+
+add
